--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@xenova/transformers": "2.4.2",
+    "@xenova/transformers": "^2.4.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
